# oxideav-mp1

./: CHANGELOG.md  Cargo.toml  README.md
src/: analysis.rs  bitreader.rs  bitwriter.rs  decoder.rs  encoder.rs  header.rs  lib.rs  psy.rs  synthesis.rs  window.rs
tests/: encode_roundtrip.rs  encoder_vbr.rs  synth_roundtrip.rs
